<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:background="@color/blue_bg"
    tools:context=".result.ResultActivity">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/AQI"
        android:textColor="@color/navy"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/Poppins_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_number_pm10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/number"
        android:textColor="@color/navy"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_title" />

    <TextView
        android:id="@+id/result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/result_label"
        android:textColor="@color/navy"
        android:textSize="28sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_number_pm10" />

    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#6096BA"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_label" />

    <TextView
        android:id="@+id/pm10"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/satuan_pm10"
        android:textColor="@color/navy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/result_number1_pm10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/result_number1_pm10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/navy"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pm10" />

    <TextView
        android:id="@+id/result_desc"
        android:layout_width="206dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:text="@string/desc"
        android:textColor="@color/navy"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="@+id/pm10"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="#6096BA"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_number1_pm10"
        app:layout_constraintVertical_bias="0.05" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_logo2"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_mask"
                tools:src="@drawable/ic_mask" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/Poppins_reg"
                android:text="@string/wear_mask"
                android:textColor="@color/navy"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:gravity="center"
            android:paddingTop="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/tableLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout3">

            <ImageView
                android:id="@+id/img_logo1"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_mask"
                tools:src="@drawable/ic_safety" />


            <TextView
                android:id="@+id/txt1"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/Poppins_reg"
                android:gravity="end"
                android:text="@string/long_term"
                android:textColor="@color/navy"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.836"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>